# android-ndk-compression-tools

./: LICENSE  README.md  build.sh  download.sh
bzip2/: Makefile
gzip/: ChangeLog  ChangeLog-2007  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  algorithm.doc  bits.c  cfg.mk  configure  configure.ac  deflate.c  dist-check.mk  gunzip.in  gzexe.in  gzip.1  gzip.c  gzip.doc  gzip.h  inflate.c  lzw.c  lzw.h  revision.h  tailor.h  trees.c  unlzh.c  unlzw.c  unpack.c  unzip.c  util.c  zcat.in  zcmp.in  zdiff.1  zdiff.in  zegrep.in  zfgrep.in  zforce.in  zgrep.in  (+7 more)
gzip/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
gzip/doc/: Makefile.am  Makefile.in  gzip.info  gzip.texi  version.texi
gzip/lib/: Makefile.am  Makefile.in  config.hin  config.hin~  gnulib.mk  match.c
gzip/m4/: gnulib-comp.m4  shell.m4
gzip/sample/: add.c  makecrc.c  sub.c  zread.c  ztouch
gzip/tests/: Makefile.am  Makefile.in  helin-segv  help-version  hufts  keep  memcpy-abuse  mixed  null-suffix-clobber  stdin  trailing-nul  unpack-invalid  zdiff  zgrep-context  zgrep-f  zgrep-signal  znew-k
lzop/: AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  config.hin  configure  configure.ac
lzop/B/: 00README.TXT  clean.bat  done.bat  prepare.bat  prepare.cmd  src.rsp  unset.bat
lzop/B/dos16/: bc.bat  bc_286.bat  bc_pp.bat  dm.bat  mc.bat  sc.bat  tc.bat  vc.bat  wc.bat
lzop/B/dos32/: dj2.bat  dj2.opt  dm.bat  emx.bat  highc.bat  ndp.bat  sc.bat  wc.bat  wc_c.bat  wc_d.bat  wc_p.bat  zc.bat
lzop/B/generic/: build.sh  build_gcc.sh  clean.sh
lzop/B/os2/: bc.cmd  emx.bat  emx.cmd  va.cmd  wc.bat  wc.cmd  zc.bat
lzop/B/os2_16/: mc.bat  sc.cmd  wc.bat  wc.cmd
lzop/B/win16/: bc.bat  sc.bat  vc.bat  wc.bat
lzop/B/win32/: bc.bat  cygwin.bat  dm.bat  ic.bat  lccwin32.bat  mingw.bat  pellesc.bat  pgi.bat  pw32.bat  rsxnt.bat  sc.bat  sc.rsp  vc.bat  wc.bat
lzop/B/win64/: ic.bat  vc.bat
lzop/autoconf/: config.sub
lzop/doc/: Makefile.am  Makefile.in  lzop.1  lzop.html  lzop.man  lzop.pod  lzop.ps  lzop.tex  lzop.txt  magic
lzop/src/: Makefile.am  Makefile.in  c_ansic.c  c_ansim.c  c_init.c  c_none.c  c_screen.c  compress.c  conf.h  console.h  djgpp2.c  filter.c  frames.c  frames.h  help.c  lzop.c  mblock.c  miniacc.h  p_lzo.c  s_curses.c  s_djgpp2.c  s_object.c  s_vcsa.c  screen.h  util.c  version.h
pigz/: Makefile
