## Process this file with automake to produce Makefile.in
#
# Copyright (C) 1996-2010 Markus F.X.J. Oberhumer
#

bin_PROGRAMS = lzop

lzop_SOURCES = \
    lzop.c compress.c filter.c help.c mblock.c p_lzo.c util.c \
    c_init.c c_none.c c_ansim.c c_ansic.c c_screen.c \
    s_object.c s_curses.c s_djgpp2.c s_vcsa.c \
    frames.c djgpp2.c

EXTRA_DIST = \
    conf.h console.h frames.h miniacc.h screen.h version.h

